# hs-nn

./: .gitignore  ChangeLog.md  Constraints.hs  DAGIO.hs  DefaultM.hs  GenericTensor.hs  Gradients.hs  Grammar.hs  GrammarGen.hs  GrammarNN.hs  GrammarNNDAG.hs  GrammarOld.hs  Identity.hs  Java.hs  JavaDAG.hs  JavaGen.hs  JavaGeneric.hs  JavaTH.hs  LICENSE  List.hs  MonadJoin.hs  Nats.hs  Random.hs  TensorAccelerate.hs  TensorDAG.hs  TensorHMatrix.hs  Test.java  TestAccelerate.hs  Tree.hs  TypeLevel.hs  Utils.hs  VarArgs.hs  Vec.hs  VinylUtils.hs  Zippable.hs  cabal.config  hs-nn.cabal  reset-sandbox.sh
profile-accelerate/: Main.hs
profile-cuda/: Main.hs
src/: DAGIO.hs  GenericTensor.hs  Tensor.hs  TensorAccelerate.hs  TensorDAG.hs
