name:                hs-nn
version:             0.1.0.0
synopsis:            Haskell neural nets.
-- description:         
homepage:            https://github.com/vladfi1/hs-nn
license:             MIT
license-file:        LICENSE
author:              Vlad Firoiu
maintainer:          vladfi2@gmail.com
-- copyright:           
category:            Machine Learning
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.18

Flag cuda
  description: Profile with accelerate cuda backend.
  default: False

library
  exposed-modules:     Gradients, GenericTensor, TensorHMatrix, TensorAccelerate, DAGIO, TensorDAG
  -- other-modules:       
  build-depends: base >=4.8 && <4.9
               , hs-misc
               , hmatrix
               , vector
               , accelerate
               , ad
               , data-default
               , generics-sop
               , singletons
               , vinyl
               , constraints
  hs-source-dirs:      src
  -- ghc-options:         -O -fprof-auto
  default-language:    Haskell2010

executable profile-accelerate
  main-is:             Main.hs
  build-depends:       base, hs-nn, accelerate
  hs-source-dirs:      profile-accelerate
  ghc-options:         -O -fprof-auto "-with-rtsopts=-p -s -h"
  default-language:    Haskell2010

executable profile-cuda
  If flag(cuda)
    build-depends:     base, hs-nn, accelerate, accelerate-cuda
  Else
    buildable: False
  main-is:             Main.hs
  hs-source-dirs:      profile-cuda
  ghc-options:         -O -threaded -fprof-auto "-with-rtsopts=-p -s -h"
  default-language:    Haskell2010

